@@ -16,7 +16,8 @@ FIGSEPS = $(addsuffix .eps,$(FIGS))
 docs: admin-manual.pdf admin-manual.html
 
 install-docs: docs
-	$(INSTALL_DATA) -t $(domjudge_docdir)/admin admin-manual.pdf admin-manual*.html $(FIGSPNG)
+	$(INSTALL_DATA) -t $(DESTDIR)$(domjudge_docdir)/admin \
+		admin-manual.pdf admin-manual*.html $(FIGSPNG)
 
 admin-manual.pdf: admin-manual.sgml ../docs_header.tex $(FIGSPNG) $(FIGSEPS)
 	linuxdoc -B latex -o pdf -P "`cat ../docs_header.tex`" $< >/dev/null
