@@ -22,14 +22,15 @@ check_float: -lm
 runguard: runguard.c $(TOPDIR)/etc/config.h $(TOPDIR)/etc/runguard-config.h -lm
 
 install-judgehost:
-	$(INSTALL_SCRIPT) -t $(judgehost_libjudgedir) \
+	$(INSTALL_SCRIPT) -t $(DESTDIR)$(judgehost_libjudgedir) \
 		compile_*.sh test_solution.sh run compare_program.sh \
 		compare check_diff.sh check_float chroot-startstop.sh
-	$(INSTALL_DATA)   -t $(judgehost_libjudgedir) judgedaemon.main.php \
-		parse_result.xslt
-	$(INSTALL_SCRIPT) -t $(judgehost_bindir) judgedaemon
-	$(INSTALL_PROG) -t $(judgehost_libjudgedir) sh-static
-	-$(INSTALL_PROG) -o root -m u=rwxs,go=rx -t $(judgehost_bindir) runguard
+	$(INSTALL_DATA)   -t $(DESTDIR)$(judgehost_libjudgedir) \
+		judgedaemon.main.php parse_result.xslt
+	$(INSTALL_SCRIPT) -t $(DESTDIR)$(judgehost_bindir) judgedaemon
+	$(INSTALL_PROG) -t $(DESTDIR)$(judgehost_libjudgedir) sh-static
+	-$(INSTALL_PROG) -o root -m 4755 -t $(DESTDIR)$(judgehost_bindir) \
+		runguard
 
 clean-l:
 	-rm -f $(TARGETS)
