@@ -89,18 +89,25 @@ judgehost_judgedir     = @judgehost_judgedir@
 
 domjudge_docdir        = @domjudge_docdir@
 
-domserver_dirs = $(domserver_bindir) $(domserver_etcdir) $(domserver_wwwdir) \
-                 $(domserver_libdir) $(domserver_libsubmitdir) \
-                 $(domserver_libwwwdir) $(domserver_logdir) \
-                 $(domserver_tmpdir) $(domserver_submitdir) $(domserver_sqldir) \
-                 $(addprefix $(domserver_wwwdir)/images/,affiliations countries teams) \
-                 $(addprefix $(domserver_wwwdir)/,public team jury plugin)
+domserver_dirs = $(addprefix $(DESTDIR), \
+			$(domserver_bindir) $(domserver_etcdir) \
+			$(domserver_wwwdir) $(domserver_libdir) \
+			$(domserver_libsubmitdir) $(domserver_libwwwdir) \
+			$(domserver_logdir) $(domserver_tmpdir) \
+			$(domserver_submitdir) $(domserver_sqldir) \
+			$(addprefix $(domserver_wwwdir)/images/, \
+				affiliations countries teams) \
+	       		$(addprefix $(domserver_wwwdir)/, \
+				public team jury plugin))
 
-judgehost_dirs = $(judgehost_bindir) $(judgehost_etcdir) $(judgehost_libdir) \
-                 $(judgehost_libjudgedir) $(judgehost_logdir) \
-                 $(judgehost_tmpdir) $(judgehost_judgedir)
+judgehost_dirs = $(addprefix $(DESTDIR), \
+		 	$(judgehost_bindir) $(judgehost_etcdir) \
+			$(judgehost_libdir) $(judgehost_libjudgedir) \
+			$(judgehost_logdir) $(judgehost_tmpdir) \
+			$(judgehost_judgedir))
 
-docs_dirs      = $(addprefix $(domjudge_docdir)/,admin judge team examples logos)
+docs_dirs      = $(addprefix $(DESTDIR), $(addprefix $(domjudge_docdir)/, \
+			admin judge team examples logos))
 
 # Macro to substitute configure variables.
 # Defined in makefile to allow for expansion of ${prefix} etc. during
