@@ -46,9 +46,10 @@ $(SUBMITCOMMONOBJ): %$(OBJEXT): %.cc %.h $(LIBHEADERS)
 
 install-domserver:
 ifeq ($(SUBMIT_ENABLE_CMD),1)
-	$(INSTALL_PROG) -t $(domserver_bindir) submitdaemon
+	$(INSTALL_PROG) -t $(DESTDIR)$(domserver_bindir) submitdaemon
 endif
-	$(INSTALL_SCRIPT) -t $(domserver_libsubmitdir) submit_copy.sh submit_db.php
+	$(INSTALL_SCRIPT) -t $(DESTDIR)$(domserver_libsubmitdir) \
+		submit_copy.sh submit_db.php
 
 clean-l:
 	-rm -f $(TARGETS) $(SUBMITCOMMONOBJ)
